Add Java 8 support