@@ -3,6 +3,7 @@ package gg.jte.compiler;
 import gg.jte.ContentType;
 import gg.jte.html.HtmlPolicy;
 import gg.jte.html.HtmlPolicyException;
+import gg.jte.runtime.StringUtils;
 import gg.jte.runtime.TemplateType;
 
 import java.util.*;
@@ -212,7 +213,7 @@ final class TemplateParser {
                 if (currentMode == Mode.JavaCodeParam) {
                     TagMode previousMode = getPreviousMode(TagMode.class);
                     extract(templateCode, lastIndex, i, (d, c) -> {
-                        if (c != null && !c.isBlank()) {
+                        if (!StringUtils.isBlank(c)) {
                             previousMode.params.add(c);
                         }
                     });
@@ -245,7 +246,7 @@ final class TemplateParser {
             } else if (currentChar == ',' && currentMode == Mode.JavaCodeParam) {
                 TagMode previousMode = getPreviousMode(TagMode.class);
                 extract(templateCode, lastIndex, i, (d, c) -> {
-                    if (c != null && !c.isBlank()) {
+                    if (!StringUtils.isBlank(c)) {
                         previousMode.params.add(c);
                     }
                 });
@@ -1016,7 +1017,7 @@ final class TemplateParser {
     public static class HtmlTag implements gg.jte.html.HtmlTag {
 
         // See https://www.lifewire.com/html-singleton-tags-3468620
-        private static final Set<String> VOID_HTML_TAGS = Set.of("area", "base", "br", "col", "command", "embed", "hr", "img", "input", "keygen", "link", "meta", "param", "source", "track", "wbr");
+        private static final Set<String> VOID_HTML_TAGS = new HashSet<>(Arrays.asList("area", "base", "br", "col", "command", "embed", "hr", "img", "input", "keygen", "link", "meta", "param", "source", "track", "wbr"));
 
         public final String name;
         public final boolean intercepted;
@@ -1090,7 +1091,7 @@ final class TemplateParser {
     public static class HtmlAttribute implements gg.jte.html.HtmlAttribute {
         // See https://meiert.com/en/blog/boolean-attributes-of-html/
         @SuppressWarnings("SpellCheckingInspection")
-        private static final Set<String> BOOLEAN_HTML_ATTRIBUTES = Set.of("allowfullscreen", "allowpaymentrequest", "async", "autofocus", "autoplay", "checked", "controls", "default", "disabled", "formnovalidate", "hidden", "ismap", "itemscope", "loop", "multiple", "muted", "nomodule", "novalidate", "open", "playsinline", "readonly", "required", "reversed", "selected", "truespeed");
+        private static final Set<String> BOOLEAN_HTML_ATTRIBUTES = new HashSet<>(Arrays.asList("allowfullscreen", "allowpaymentrequest", "async", "autofocus", "autoplay", "checked", "controls", "default", "disabled", "formnovalidate", "hidden", "ismap", "itemscope", "loop", "multiple", "muted", "nomodule", "novalidate", "open", "playsinline", "readonly", "required", "reversed", "selected", "truespeed"));
 
         public final String name;
         public final char quotes;
